--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="/css/main.css">
-    <link rel="stylesheet" href="/css/button.css">
     <title>vue-ui-组件</title>
 </head>
 
@@ -14,10 +13,7 @@
     <div id="app">
         <g-button></g-button>
     </div>
-    <script src="/node_modules/vue/dist/vue.min.js"></script>
-    <script src="/scripts/button.js"></script>
-    <script src="/scripts/main.js"></script>
-
+    <script src="/scripts/app.js"></script>
 </body>
 
 </html>
