添加primary按钮和圆角按钮

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <g-button>下载</g-button>
         <g-button icon="settings">下载</g-button>
         <g-button icon="settings" icon-position="right">按钮</g-button>
+        <g-button icon="settings" type="primary" icon-position="right">按钮</g-button>
+        <g-button icon="settings" type="primary" icon-position="right" shape="circle">按钮</g-button>
     </div>
     <script src="/scripts/app.js"></script>
     <script src="//at.alicdn.com/t/font_1066225_wwm6fpwqtoo.js"></script>
