--- a/index.html
+++ b/index.html
@@ -16,9 +16,13 @@
         <g-button icon="settings" icon-position="right">按钮</g-button>
         <g-button icon="settings" type="primary" icon-position="right" :load=loading3 @click="loading3=!loading3">按钮</g-button>
         <g-button icon="settings" type="primary" icon-position="right" shape="circle">按钮</g-button>
+        <button-group>
+            <g-button icon="left">上一页</g-button>
+            <g-button icon="right" icon-position="right">下一页</g-button>
+        </button-group>
     </div>
     <script src="/scripts/app.js"></script>
-    <script src="//at.alicdn.com/t/font_1066225_f276kxr579s.js"></script>
+    <script src="//at.alicdn.com/t/font_1066225_b6bodopcsyg.js"></script>
 </body>
 
 </html>
