--- a/index.html
+++ b/index.html
@@ -11,15 +11,18 @@
 
 <body>
     <div id="app">
-        <g-button :load=loading1 @click="loading1=!loading1">按钮</g-button>
-        <g-button icon="settings" :load=loading2 @click="loading2=!loading2">设置</g-button>
-        <g-button icon="settings" icon-position="right">设置</g-button>
-        <g-button icon="settings" type="primary" icon-position="right" :load=loading3 @click="loading3=!loading3">设置</g-button>
-        <g-button icon="upload" type="primary" icon-position="right" shape="circle">上传</g-button>
-        <g-button-group>
-            <g-button icon="left">上一页</g-button>
-            <g-button icon="right" icon-position="right">下一页</g-button>
-        </g-button-group>
+        <g-input></g-input>
+        <div id="area2">
+            <g-button :load=loading1 @click="loading1=!loading1">按钮</g-button>
+            <g-button icon="settings" :load=loading2 @click="loading2=!loading2">设置</g-button>
+            <g-button icon="settings" icon-position="right">设置</g-button>
+            <g-button icon="settings" type="primary" icon-position="right" :load=loading3 @click="loading3=!loading3">设置</g-button>
+            <g-button icon="upload" type="primary" icon-position="right" shape="circle">上传</g-button>
+            <g-button-group>
+                <g-button icon="left">上一页</g-button>
+                <g-button icon="right" icon-position="right">下一页</g-button>
+            </g-button-group>
+        </div>
     </div>
     <script src="/scripts/app.js"></script>
     <script src="//at.alicdn.com/t/font_1066225_b6bodopcsyg.js"></script>
