--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 <body>
     <div id="app">
         <div class="area">
-            <g-input  @change="inputChange" v-model="message"></g-input>
+            <g-input @change="inputChange" v-model="message"></g-input>
             <p>{{message}}</p>
+        </div>
+        <div class="area">
             <g-input value="输入框" disabled></g-input>
             <g-input value="输入框" readonly></g-input>
         </div>
@@ -34,6 +36,6 @@
     </div>
     <script src="/scripts/app.js"></script>
     <script src="/scripts/svg.js"></script>
-    </body>
+</body>
 
 </html>
