--- a/index.html
+++ b/index.html
@@ -11,17 +11,7 @@
 
 <body>
     <div id="app">
-        <!-- <g-tabs selected="selectedTab" @update:selected="selectedTab = $event"> -->
-        <g-tabs selected="tab1">
-            <g-tabs-head>
-                <g-tabs-item name="tab1">科技</g-tabs-item>
-                <g-tabs-item name="tab2">体育</g-tabs-item>
-            </g-tabs-head>
-            <g-tabs-body>
-                <g-tabs-pane name="tab1">科技新闻</g-tabs-pane>
-                <g-tabs-pane name="tab2">体育新闻</g-tabs-pane>
-            </g-tabs-body>
-        </g-tabs>
+       <g-toast :auto-close='false' position='middle'>click</g-toast>
     </div>
     <script src="/scripts/app.js"></script>
     <script src="/scripts/svg.js"></script>
