--- a/index.html
+++ b/index.html
@@ -11,12 +11,16 @@
 
 <body>
     <div id="app">
-       <g-popover>
-           <template slot="content">
-                <div>我是要弹出的内容</div>
-           </template>       
-               <button>click</button>     
-       </g-popover>
+        <!-- <div style="height:1000px;"></div> -->
+        <div style="overflow:hidden">
+            <g-popover>
+                <template slot="content">
+                    <div>我是要弹出的内容</div>
+                </template>
+                <button>click</button>
+            </g-popover>
+        </div>
+
     </div>
     <script src="/scripts/app.js"></script>
     <script src="/scripts/svg.js"></script>
