--- a/index.html
+++ b/index.html
@@ -11,20 +11,12 @@
 
 <body>
     <div id="app">
-        <!-- <div style="height:1000px;"></div> -->
-            <g-popover >
-                <template slot="content">
-                    <div>弹出的内容</div>
-                </template>
-                <g-button>click</g-button>
-            </g-popover>
-            <g-popover position="right">
-                <template slot="content">
-                    <div>弹出的内容</div>
-                </template>
-                <g-button>click</g-button>
-            </g-popover>
-
+        <div>
+            <g-button>默认按钮</g-button>
+            <g-button icon="settings">设置</g-button>
+            <g-button icon="download" icon-position="right">下载</g-button>
+            <g-button :load="true">登录中</g-button>
+        </div>
     </div>
     <script src="/scripts/app.js"></script>
     <script src="/scripts/svg.js"></script>
